# applemusic-like-lyrics

./: .editorconfig  .gitignore  .yarnrc.yml  404.html  Cargo.toml  LICENSE  README-CN.md  README.md  biome.json  build.js  build.mjs  crowdin.yml  en-US.html  en-US.txt  index.html  index.txt  lerna.json  manifest.json  nx.json  package.json  pnpm-lock.yaml  rome.json  tsconfig.json  tsconfig.node.json  zh-CN.html  zh-CN.txt
.github/workflows/: build-dev.yaml  build-player.yaml  deploy-docs.yaml  sync-to-gitcode.yaml
amll-fft/: Cargo.toml
amll-fft/src/: lib.rs
en-US/: docs.html  docs.txt
src/: api.ts  appkit.sass  betterncm.d.ts  config.tsx  css-builder.ts  global-events.ts  global.d.ts  index.html  index.sass  index.styl  index.tsx  lib-frontend-play.ts  logger.ts  lyric-background.tsx  lyric-dots.tsx  lyric-parser.ts  lyric-test.ts  lyric-test.tsx  lyric-view.tsx  main-view.sass  main-view.styl  react-api.ts  startup_script.ts  utils.ts  worker_script.ts
src/api/: index.ts  react.ts
src/bindings/: lib-frontend-play.ts  lib-lyric.ts
src/components/: error-boundary.tsx  lyric-background.tsx  lyric-dots.tsx  lyric-line.tsx  lyric-player-fm-controls.tsx  lyric-player-options.tsx  lyric-player-topbar.tsx  lyric-player.tsx  lyric-renderer.tsx  lyric-view.tsx  netease-api-wrapper.tsx  no-lyric-options.tsx
src/config/: about.tsx  background.tsx  config-components.tsx  core.ts  custom-css.tsx  index.tsx  lyric-source.tsx  lyric-style.tsx  lyric.tsx  other-style.tsx  song-info-style.tsx  warnings.tsx
src/core/: editor-client.ts  (+5 more)
zh-CN/: docs.html  docs.txt
(+228 files in other folders)
