[workspace]
resolver = "2"
members = [
    "./packages/lyric",
    "./packages/fft",
    "./packages/ws-protocol",
    "./packages/player-core",
]
exclude = [
    "./packages/player/src-tauri",
    "./packages/skia-player",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"

